objects/IAM_Contact_Provisioning__c.object
<CustomObject>
    <fields>
        <fullName>IAM_Username__c</fullName>
        <formula>IAM_Contact__r.Username__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Username</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_swregExpire__c</fullName>
        <label>SW Reg Expiration</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_userId__c</fullName>
        <description>This cannot be unique because a single user can have multiple records.</description>
        <label>IAM_userId</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Location Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QSOLView__c</fullName>
        <label>QSOLView</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Removal_Mail_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Removal Mail Sent?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User_Feature_Account__c</fullName>
        <formula>IAM_Contact__r.Account.Account__c</formula>
        <label>User Feature Account</label>
        <type>Text</type>
    </fields>
    <label>User Feature &amp; Access</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>IAM_Account_Application__c</columns>
        <columns>IAM_Contact__c</columns>
        <columns>IAM_Application_Name__c</columns>
        <columns>IAM_Role__c</columns>
        <columns>IAM_Subscription_Name__c</columns>
        <columns>IAM_Start_Date__c</columns>
        <columns>IAM_End_Date__c</columns>
        <columns>IAM_userId__c</columns>
        <columns>IAM_Status__c</columns>
        <columns>IAM_User__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>U-{0000}</displayFormat>
        <label>Rec Num</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User_Features_And_ Access</pluralLabel>
    <recordTypes>
        <fullName>Archer</fullName>
        <active>true</active>
        <label>Archer</label>
    </recordTypes>
    <recordTypes>
        <fullName>BOX</fullName>
        <active>true</active>
        <label>BOX</label>
    </recordTypes>
    <recordTypes>
        <fullName>BOX_External_Partners</fullName>
        <active>true</active>
        <label>BOX External Partners</label>
    </recordTypes>
    <recordTypes>
        <fullName>CARE</fullName>
        <active>true</active>
        <label>CARE</label>
    </recordTypes>
    <recordTypes>
        <fullName>CSS_Application</fullName>
        <active>true</active>
        <label>CSS</label>
    </recordTypes>
    <recordTypes>
        <fullName>Cummins_API_Portal</fullName>
        <active>true</active>
        <label>Cummins API Portal</label>
    </recordTypes>
    <recordTypes>
        <fullName>Cummins_India_Application</fullName>
        <active>true</active>
        <label>India ABO</label>
    </recordTypes>
    <recordTypes>
        <fullName>Cumpas_Application</fullName>
        <active>true</active>
        <label>CUMPAS 2.0</label>
    </recordTypes>
    <recordTypes>
        <fullName>DBU_EFSR</fullName>
        <active>true</active>
        <description>India ABO DBU Service Cloud</description>
        <label>DBU EFSR</label>
    </recordTypes>
    <recordTypes>
        <fullName>EDS_Application</fullName>
        <active>true</active>
        <label>EDS</label>
    </recordTypes>
    <recordTypes>
        <fullName>Electrified_Powertrain_Specification_Tool</fullName>
        <active>true</active>
        <label>Electrified Powertrain Specification Tool</label>
    </recordTypes>
    <recordTypes>
        <fullName>Fleetguard_FIT</fullName>
        <active>true</active>
        <label>Fleetguard FIT</label>
    </recordTypes>
    <recordTypes>
        <fullName>FluidWatch</fullName>
        <active>true</active>
        <label>FluidWatch</label>
    </recordTypes>
    <recordTypes>
        <fullName>Fluids_Registration</fullName>
        <active>true</active>
        <description>Record type to be used to assign to user access and feature when assigning fluid registration application</description>
        <label>Fluids Registration</label>
    </recordTypes>
    <recordTypes>
        <fullName>HighRadius</fullName>
        <active>true</active>
        <label>HighRadius</label>
    </recordTypes>
    <recordTypes>
        <fullName>IAM_FT_NPBU_Diagnostics</fullName>
        <active>true</active>
        <description>Energize - Admin Managed</description>
        <label>FT - NPBU Diagnostics</label>
    </recordTypes>
    <recordTypes>
        <fullName>IAM_Field_Test_Guidanz_Mobile</fullName>
        <active>true</active>
        <description>Free application/subscription for Guidanz Mobile users</description>
        <label>Field Test Guidanz Mobile</label>
    </recordTypes>
    <recordTypes>
        <fullName>IAM_Global_Dealer_Portal</fullName>
        <active>true</active>
        <label>Global Dealer Portal</label>
    </recordTypes>
    <recordTypes>
        <fullName>IAM_Guidanz</fullName>
        <active>true</active>
        <label>Guidanz</label>
    </recordTypes>
    <recordTypes>
        <fullName>IAM_Guidanz_Mobile</fullName>
        <active>true</active>
        <label>Guidanz Mobile</label>
    </recordTypes>
    <recordTypes>
        <fullName>IAM_Guidanz_Service_Portal</fullName>
        <active>true</active>
        <label>Guidanz Service Portal</label>
    </recordTypes>
    <recordTypes>
        <fullName>IAM_Rapid_Serve_Web</fullName>
        <active>true</active>
        <label>Rapid Serve Web</label>
    </recordTypes>
    <recordTypes>
        <fullName>IAM_WWSPS</fullName>
        <active>true</active>
        <label>WWSPS</label>
    </recordTypes>
    <recordTypes>
        <fullName>INSITE</fullName>
        <active>true</active>
        <label>INSITE</label>
    </recordTypes>
    <recordTypes>
        <fullName>Identity_And_Access_Management</fullName>
        <active>true</active>
        <label>Identity And Access Management</label>
    </recordTypes>
    <recordTypes>
        <fullName>Marketplace</fullName>
        <active>true</active>
        <label>Marketplace</label>
    </recordTypes>
    <recordTypes>
        <fullName>Mexico_Warranty</fullName>
        <active>true</active>
        <label>Mexico Warranty</label>
    </recordTypes>
    <recordTypes>
        <fullName>My_Fleetguard_Customer_Portal</fullName>
        <active>true</active>
        <label>My Fleetguard Customer Portal</label>
    </recordTypes>
    <recordTypes>
        <fullName>NextGen</fullName>
        <active>true</active>
        <label>NextGen</label>
    </recordTypes>
    <recordTypes>
        <fullName>PC_Application</fullName>
        <active>true</active>
        <label>Connected Solutions</label>
    </recordTypes>
    <recordTypes>
        <fullName>PowerSpec</fullName>
        <active>true</active>
        <description>Record type for PowerSpec</description>
        <label>PowerSpec</label>
    </recordTypes>
    <recordTypes>
        <fullName>ProMotion_application</fullName>
        <active>true</active>
        <label>Cummins Service Training</label>
    </recordTypes>
    <recordTypes>
        <fullName>Quick_Serve_Online</fullName>
        <active>true</active>
        <label>QuickServe Online</label>
    </recordTypes>
    <recordTypes>
        <fullName>RLS_Application</fullName>
        <active>true</active>
        <label>Repair logistics and Service</label>
    </recordTypes>
    <recordTypes>
        <fullName>Shop_Cummins_Online_Store</fullName>
        <active>true</active>
        <label>Shop Cummins Online Store</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>IAM_AssignedCountCanNotBeRevoked</fullName>
        <active>true</active>
        <description>Insufficient units to revoke.</description>
        <errorConditionFormula>AND(
OR(INCLUDES(IAM_Role__c, &apos;Guidanz Mobile CalAssist Units&apos;),
INCLUDES(IAM_Role__c, &apos;Guidanz Mobile Intapp Units&apos;),
INCLUDES(IAM_Role__c, &apos;Guidanz Mobile Intapp OEM Units&apos;),
INCLUDES(IAM_Role__c, &apos;Field Test CalAssist Units Guidanz Mobile&apos;),
INCLUDES(IAM_Role__c, &apos;Field Test Intapp Units Guidanz Mobile&apos;),
INCLUDES(IAM_Role__c, &apos;Field Test Intapp OEM Units Guidanz Mobile&apos;)),
ISCHANGED( IAM_Assigned_Units__c ),
PRIORVALUE(IAM_Assigned_Units__c) &gt; IAM_Assigned_Units__c,
(PRIORVALUE(IAM_Assigned_Units__c ) - IAM_Assigned_Units__c) &gt; IAM_Remaining_Units__c)</errorConditionFormula>
        <errorMessage>Insufficient units to revoke.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>IAM_AssignedCountNotGTParentRemaining</fullName>
        <active>true</active>
        <description>Assigned Units on user subscription cannot be greater than available Remaining Units on parent (location) subscription</description>
        <errorConditionFormula>AND(OR(INCLUDES(IAM_Role__c, &apos;Guidanz Mobile CalAssist Units&apos;),
INCLUDES(IAM_Role__c, &apos;Guidanz Mobile Intapp Units&apos;),
INCLUDES(IAM_Role__c, &apos;Guidanz Mobile Intapp OEM Units&apos;),
INCLUDES(IAM_Role__c, &apos;Field Test CalAssist Units Guidanz Mobile&apos;),
INCLUDES(IAM_Role__c, &apos;Field Test Intapp Units Guidanz Mobile&apos;),
INCLUDES(IAM_Role__c, &apos;Field Test Intapp OEM Units Guidanz Mobile&apos;)), ISCHANGED( IAM_Assigned_Units__c ), (IAM_Assigned_Units__c - PRIORVALUE(IAM_Assigned_Units__c)) &gt;  IAM_Account_Application__r.IAM_Remaining_Units__c )</errorConditionFormula>
        <errorMessage>Insufficient Available Units at Location.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>IAM_Check_To_Stop_Name_Modification</fullName>
        <active>true</active>
        <description>This rule is to make sure we do not allow user to change applicaiton,Role/feature and Start Date</description>
        <errorConditionFormula>AND(NOT(IAM_Guidanz_Skip_Validation__c),
AND(
NOT(ISBLANK( PRIORVALUE(    IAM_User__c ) ) ), 
NOT(ISBLANK( PRIORVALUE(   IAM_Contact__c ) ) ),
NOT(ISBLANK( PRIORVALUE(  IAM_Application_Name__c  ) ) ), 
NOT(ISBLANK( PRIORVALUE(   IAM_Start_Date__c  ) ) ), 
OR(
ISCHANGED(IAM_User__c ),
ISCHANGED(IAM_Contact__c ), 
ISCHANGED(IAM_Application_Name__c  ),  
ISCHANGED(IAM_Start_Date__c  ) 
) 
),$Profile.Name &lt;&gt; &apos;System Administrator&apos;
)</errorConditionFormula>
        <errorMessage>Cannot change the Application or Contact or User or Role/Feature value for already created record.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>IAM_DA_Customer_List_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND((ISPICKVAL(IAM_Application_Name__c,&apos;Connected Solutions&apos;)),(!(REGEX(IAM_DA_Customer_List__c,&quot;(^ALL$)|([1-9]*$)|^[0-9]+(,[0-9]+)*$&quot;))))</errorConditionFormula>
        <errorDisplayField>IAM_DA_Customer_List__c</errorDisplayField>
        <errorMessage>Please enter keyword ALL or number with Comma separation. Do not place any comma after last number</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>IAM_End_Date_Validation</fullName>
        <active>true</active>
        <description>Validates if End Date is in future</description>
        <errorConditionFormula>AND($Profile.Name &lt;&gt; &quot;System Administrator&quot;,
OR(ISPICKVAL(IAM_Application_Name__c, &apos;Field Test Guidanz Mobile&apos;),
ISPICKVAL(IAM_Application_Name__c, &apos;FT - NPBU Diagnostics&apos;)),
ISPICKVAL(IAM_Contact__r.Account.Type, &apos;Internal&apos;),
IAM_Contact__r.Account.IAM_Internal_Account__c,
OR (
IAM_End_Date__c &lt; IAM_Start_Date__c ,
IAM_End_Date__c &lt; TODAY(),
IAM_End_Date__c &gt; IAM_Account_Application__r.IAM_Subscription_End_Date__c
)
)</errorConditionFormula>
        <errorMessage>Please enter valid End Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>IAM_End_Date_Validation_Non_Internal_Loc</fullName>
        <active>true</active>
        <description>Validate if End Date is equal to Account Subscription End Date</description>
        <errorConditionFormula>AND($Profile.Name &lt;&gt; &quot;System Administrator&quot;,
OR(ISPICKVAL(IAM_Application_Name__c, &apos;Field Test Guidanz Mobile&apos;),
ISPICKVAL(IAM_Application_Name__c, &apos;FT - NPBU Diagnostics&apos;)),
NOT(
AND(
ISPICKVAL( IAM_Contact__r.Account.Type , &apos;Internal&apos;),
IAM_Contact__r.Account.IAM_Internal_Account__c
)
),
ISPICKVAL( IAM_Status__c, &apos;Active&apos;),
ISCHANGED(IAM_End_Date__c),
IAM_End_Date__c  &lt;&gt;  IAM_Account_Application__r.IAM_Subscription_End_Date__c 
)</errorConditionFormula>
        <errorMessage>User cannot change End Date for Dealer/Distributor/Fleet/etc locations. It should always be equal to Account subscription End Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>IAM_RLS_CustomerNumber_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
NOT(ISBLANK(IAM_RLS_Customer_Number__c)), 
NOT(REGEX(IAM_RLS_Customer_Number__c,&quot;[0-9]+(,[0-9]+)*&quot;)))</errorConditionFormula>
        <errorDisplayField>IAM_RLS_Customer_Number__c</errorDisplayField>
        <errorMessage>Please enter number with Comma seperation and please do not place comma after last number</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>IAM_Role_Change_FieldTest</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ISCHANGED( IAM_Role__c ),
OR(ISPICKVAL(IAM_Application_Name__c, &apos;Field Test Guidanz Mobile&apos; ),
ISPICKVAL(IAM_Application_Name__c, &apos;FT - NPBU Diagnostics&apos;)),
$Profile.Name &lt;&gt; &quot;System Administrator&quot;,
$Profile.Name &lt;&gt; &quot;CSS Integration&quot;,
$Profile.Name &lt;&gt; &quot;IAM_Integration_User&quot;,
$User.IAM_UID__c&lt;&gt;&apos;hk704&apos;,
$User.IAM_UID__c&lt;&gt;&apos;av032&apos;
)</errorConditionFormula>
        <errorMessage>User cannot change Role for Field Test application.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>IAM_UserChannelAdminSubscriptionError</fullName>
        <active>true</active>
        <errorConditionFormula>$User.Id = $Label.IAM_SubscriptionChanneluser
&amp;&amp;
TEXT(IAM_Application_Name__c)=&apos;Field Test Guidanz Mobile&apos;
&amp;&amp;
(
IF(NOT(INCLUDES(IAM_Role__c, &quot;Field Test IAS Guidanz Mobile&quot;)), true,false)
||
IF(NOT(INCLUDES(IAM_Role__c, &quot;Beta Testing Guidanz Mobile&quot;)),true,false)
||
IF(NOT(INCLUDES(IAM_Role__c, &quot;Field Test SRV Guidanz Mobile&quot;)), true,false)
||
IF(NOT(INCLUDES(IAM_Role__c, &quot;Field Test Intapp Units Guidanz Mobile&quot;)),true,false)
||
IF(NOT(INCLUDES(IAM_Role__c, &quot;Field Test CalAssist Units Guidanz Mobile&quot;)),true,false))
&amp;&amp;
(IF(INCLUDES(IAM_Role__c, &quot;Field Test CMP Guidanz Mobile&quot;),true,false)
||
IF(INCLUDES(IAM_Role__c, &quot;Field Test Intapp OEM Units Guidanz Mobile&quot;),true,false)
||
IF(INCLUDES(IAM_Role__c, &quot;Field Test PS PRO Guidanz Mobile&quot;),true,false)
||
IF(INCLUDES(IAM_Role__c, &quot;Field Test Power Plus Lite Guidanz Mobile&quot;),true,false))</errorConditionFormula>
        <errorMessage>You cannot assign subscriptions except for Beta Testing, Field Test SRV, Field Test IAS, Intapp Units, and CalAssist Units.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Qsol_Expiration</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL(IAM_Application_Name__c, &apos;QuickServe Online&apos;),ISPICKVAL( IAM_Status__c , &apos;Active&apos;), IAM_Qsolexpiration__c == &apos;&apos;)</errorConditionFormula>
        <errorDisplayField>IAM_Qsolexpiration__c</errorDisplayField>
        <errorMessage>Please enter Qsol Expiration</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Qsol_View</fullName>
        <active>false</active>
        <errorConditionFormula>AND(ISPICKVAL(IAM_Application_Name__c, &apos;QuickServe Online&apos;),  QSOLView__c  == &apos;&apos;)</errorConditionFormula>
        <errorDisplayField>QSOLView__c</errorDisplayField>
        <errorMessage>Please enter Qsol View</errorMessage>
    </validationRules>
</CustomObject>